# readinglog

./: COPYING  README.md  TODO.md  com.sledgehogsoftware.readinglog.json  meson.build
data/: com.sledgehogsoftware.readinglog.desktop.in  com.sledgehogsoftware.readinglog.gschema.xml  com.sledgehogsoftware.readinglog.metainfo.xml.in  com.sledgehogsoftware.readinglog.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: main-widget.c  main-widget.h  main-widget.ui  main.c  meson.build  readinglog-application.c  readinglog-application.h  readinglog-window.c  readinglog-window.h  readinglog-window.ui  readinglog.gresource.xml
